<resources>
    <string name="app_name">YandexTranslate</string>
    <string name="translate_text">Перевести</string>
    <string name="enter_text_text">Введите текст:</string>
    <string name="translation_text">Перевод:</string>
    <string name="from">C:</string>
    <string name="to">На:</string>

    <string-array name="languages">
        <item>азербайджанский (az)</item>
        <item>албанский (sq)</item>
        <item>амхарский (am)</item>
        <item>английский (en)</item>
        <item>арабский (ar)</item>
        <item>армянский (hy)</item>
        <item>африкаанс (af)</item>
        <item>баскский (eu)</item>
        <item>башкирский (ba)</item>
        <item>белорусский (be)</item>
        <item>бенгальский (bn)</item>
        <item>бирманский (my)</item>
        <item>болгарский (bg)</item>
        <item>боснийский (bs)</item>
        <item>валлийский (cy)</item>
        <item>венгерский (hu)</item>
        <item>вьетнамский (vi)</item>
        <item>гаитянский(креольский) (ht)</item>
        <item>галисийский (gl)</item>
        <item>голландский (nl)</item>
        <item>горномарийский (mrj)</item>
        <item>греческий (el)</item>
        <item>грузинский (ka)</item>
        <item>гуджарати (gu)</item>
        <item>датский (da)</item>
        <item>иврит (he)</item>
        <item>идиш (yi)</item>
        <item>индонезийский (id)</item>
        <item>ирландский (ga)</item>
        <item>итальянский (it)</item>
        <item>исландский (is)</item>
        <item>испанский (es)</item>
        <item>казахский (kk)</item>
        <item>каннада (kn)</item>
        <item>каталанский (ca)</item>
        <item>киргизский (ky)</item>
        <item>китайский (zh)</item>
        <item>корейский (ko)</item>
        <item>коса (xh)</item>
        <item>кхмерский (km)</item>
        <item>лаосский (lo)</item>
        <item>латынь (la)</item>
        <item>латышский (lv)</item>
        <item>литовский (lt)</item>
        <item>люксембургский (lb)</item>
        <item>малагасийский (mg)</item>
        <item>малайский (ms)</item>
        <item>малаялам (ml)</item>
        <item>мальтийский (mt)</item>
        <item>македонский (mk)</item>
        <item>маори (mi)</item>
        <item>маратхи (mr)</item>
        <item>марийский (mhr)</item>
        <item>монгольский (mn)</item>
        <item>немецкий (de)</item>
        <item>непальский (ne)</item>
        <item>норвежский (no)</item>
        <item>панджаби (pa)</item>
        <item>папьяменто (pap)</item>
        <item>персидский (fa)</item>
        <item>польский (pl)</item>
        <item>португальский (pt)</item>
        <item>румынский (ro)</item>
        <item>русский (ru)</item>
        <item>себуанский (ceb)</item>
        <item>сербский (sr)</item>
        <item>сингальский (si)</item>
        <item>словацкий (sk)</item>
        <item>словенский (sl)</item>
        <item>суахили (sw)</item>
        <item>сунданский (su)</item>
        <item>таджикский (tg)</item>
        <item>тайский (th)</item>
        <item>тагальский (tl)</item>
        <item>тамильский (ta)</item>
        <item>татарский (tt)</item>
        <item>телугу (te)</item>
        <item>турецкий (tr)</item>
        <item>удмуртский (udm)</item>
        <item>узбекский (uz)</item>
        <item>украинский (uk)</item>
        <item>урду (ur)</item>
        <item>финский (fi)</item>
        <item>французский (fr)</item>
        <item>хинди (hi)</item>
        <item>хорватский (hr)</item>
        <item>чешский (cs)</item>
        <item>шведский (sv)</item>
        <item>шотландский (gd)</item>
        <item>эстонский (et)</item>
        <item>эсперанто (eo)</item>
        <item>яванский (jv)</item>
        <item>японский (ja)</item>

    </string-array>
</resources>
