<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/to_lang"
        android:layout_width="263dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/to"
        app:layout_constraintTop_toBottomOf="@+id/from_lang"
        android:entries="@array/languages"/>

    <Spinner
        android:id="@+id/from_lang"
        android:layout_width="263dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/from"
        app:layout_constraintTop_toBottomOf="@+id/text_perevesty"
        android:entries="@array/languages"/>

    <TextView
        android:id="@+id/from"
        android:layout_width="61dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/from"
        app:autoSizeMaxTextSize="30dp"
        app:autoSizeMinTextSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_perevesty" />

    <EditText
        android:id="@+id/translated_text"
        android:layout_width="327dp"
        android:layout_height="176dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/translate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/from_lang_text"
        android:layout_width="327dp"
        android:layout_height="175dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/translation_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/text_perevesty"
        android:layout_width="230dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/translate_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/translation_text"
        android:layout_width="204dp"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:text="@string/translation_text"
        app:layout_constraintBottom_toTopOf="@+id/translated_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/enter_text"
        android:layout_width="204dp"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:text="@string/enter_text_text"
        app:autoSizeMaxTextSize="30dp"
        app:autoSizeMinTextSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/from_lang_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/translate_button"
        android:layout_width="170dp"
        android:layout_height="65dp"
        android:layout_marginBottom="32dp"
        android:text="@string/translate_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Перевести" />

    <TextView
        android:id="@+id/to"
        android:layout_width="61dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/to"
        app:autoSizeMaxTextSize="30dp"
        app:autoSizeMinTextSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from" />

</androidx.constraintlayout.widget.ConstraintLayout>